# fastapi-restaurant-api

./: README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
tests/: test_main.py
